Livros adicionados total de 64

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ color: white!important;
                 <td>Categoria</td>
             </tr>
             <tr>
-                <td>Noções de Grego Bíblico - Grmática Fundamental | Nova Edição</td>
+                <td>Noções de Grego Bíblico - Gramática Fundamental | Nova Edição</td>
                 <td>Lourenço Stelio Rega | Johannes Bergmann</td>
                 <td>Editora</td>
                 <td>Categoria</td>
@@ -292,6 +292,192 @@ color: white!important;
             <tr>
                 <td>Novo Dicionário Internacional de Teologia do Novo Testamento</td>
                 <td>Verlyn D. Verbrugge</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Uma História do Pensamento Cristão - Dos Primórdios ao Concílio de Calcedônia Vol.1 2ª Edição</td>
+                <td>Justo L. González</td>
+                <td>Cultura Cristã</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>Uma História do Pensamento Cristão - De Agostinho às vésperas da Reforma Vol.2 2ª Edição</td>
+                <td>Justo L. González</td>
+                <td>Cultura Cristã</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>O Peregrino</td>
+                <td>John Bunyan</td>
+                <td>Principis</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Confissões</td>
+                <td>Agostinho</td>
+                <td>Principis</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Imitação de Cristo</td>
+                <td>Tomás de Kempis</td>
+                <td>Principis</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Discipulado</td>
+                <td>Dietrich Bonhoeffer</td>
+                <td>Mundo Cristão São Paulo</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Pregação - Comunicado a Fé na Era do Ceticismo</td>
+                <td>Timothy Keller</td>
+                <td>Vida Nova</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Fundamentos Filosóficos da Educação</td>
+                <td>José Antônio Vasconcelos</td>
+                <td>Intersaberes</td>
+                <td>Filosofia da Educação</td>
+            </tr>
+            <tr>
+                <td>Em Busca de Sentido 45ª Edição</td>
+                <td>Viktor E. Frankl</td>
+                <td>Sinadal | Vozes</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Introdução ao Antigo Testamento</td>
+                <td>Raymond B. Dillard & Tremper Longman III</td>
+                <td>Vida Nova</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>Teologia do Novo Testamento</td>
+                <td>George Eldon Ladd</td>
+                <td>Hagnos</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>Teologia: Sistemática, Histórica e Filosófica - Uma Introdução á Teologia Cristã</td>
+                <td>Alister McGrath</td>
+                <td>Shedd</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>A Proclamação do Evangelho</td>
+                <td>Karl Barth</td>
+                <td>Fonte Editorial</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Bíblia Sagrada - Nova Versão Internacional</td>
+                <td>Leitura Perfeita</td>
+                <td>Thomas Nelson - Brasil</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>A Palavra para Hoje</td>
+                <td>Vida</td>
+                <td>Vida</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Em Busca de Deus - A Plenitude da Alegria Cristã</td>
+                <td>John Piper</td>
+                <td>Shedd</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Batismo - Em Diferentes Visões</td>
+                <td>Karl Barth - Oscar Cullmann</td>
+                <td>Fonte Editorial</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>O Nosso Pai</td>
+                <td>Karl Barth</td>
+                <td>Fonte Editorial</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>A Bíblia Viva</td>
+                <td>Mundo Cristão</td>
+                <td>Mundo Cristão</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Chamado ao Discipulado</td>
+                <td>Karl Barth</td>
+                <td>Fonte Editorial</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Fundamentos Teológicos Educacionais</td>
+                <td>InterSaberes</td>
+                <td>InterSaberes</td>
+                <td>Filosofia da Educação</td>
+            </tr>
+            <tr>
+                <td>Apontamentos Sobre a História Das Igrejas Cristãs e os Livros Proféticos da Bíblia</td>
+                <td>InterSaberes</td>
+                <td>InterSaberes</td>
+                <td>História Cristã</td>
+            </tr>
+            <!--<tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
+                <td>Editora</td>
+                <td>Categoria</td>
+            </tr>
+            <tr>
+                <td>Livro</td>
+                <td>Autor</td>
                 <td>Editora</td>
                 <td>Categoria</td>
             </tr>
