--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <style type="text/css">
 body {
 background-image: url('https://i.imgur.com/49hkJVJ.png');
+background-repeat:no-repeat;
 margin: 0 auto;
 width: 960px;
 margin-left: 10rem;
@@ -128,7 +129,7 @@ color: white!important;
                 <td>Categoria</td>
             </tr>
             <tr>
-                <td>Dogmática - Vol.3 - Doutrina Cristã da Fé e Consumação</td>
+                <td>Dogmática - Vol.2 - Doutrina Cristã da Fé e Consumação</td>
                 <td>Emil Brunner</td>
                 <td>Editora</td>
                 <td>Categoria</td>
@@ -433,19 +434,409 @@ color: white!important;
                 <td>InterSaberes</td>
                 <td>História Cristã</td>
             </tr>
-            <!--<tr>
-                <td>Livro</td>
-                <td>Autor</td>
-                <td>Editora</td>
+            <tr>
+                <td>Natal a Mais Linda Festa</td>
+                <td>Jorge Linhares</td>
+                <td>Getsêmani</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Aconselhamento Redentivo</td>
+                <td>Wadislau Martins Gomes</td>
+                <td>Cultura Cristã</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Apologética Além da Razão - Porque Ver é Realmente Crer</td>
+                <td>James W. Sire</td>
+                <td>Cultura Cristã</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Lutero e a Teologia da Cruz - A Ruptura Teológica de Martinho Lutero</td>
+                <td>Alister E. McGrath</td>
+                <td>Cultura Cristã</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>Apologética Contemporânea - A Veracidade da Fé Cristã - 2ª Edicão</td>
+                <td>William Lane Craig</td>
+                <td>Vida Nova</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>O Caráter do Servo</td>
+                <td>Renê Terra Nova</td>
+                <td>Semente de Vida Brasil</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Bíblia Sagrada King James</td>
+                <td>Casa da Palavra</td>
+                <td>Casa da Palavra</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Dicionário Grego - Português do Antigo Testamento</td>
+                <td>Scholz, Vilson</td>
+                <td>Sociedade Bíblica do Brasil</td>
                 <td>Categoria</td>
             </tr>
             <tr>
-                <td>Livro</td>
-                <td>Autor</td>
-                <td>Editora</td>
+                <td>Documentário da Reforma - Breve Catecismo Comentado</td>
+                <td>Hélio Clemente</td>
+                <td>Vivendo Pela Palavra</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Notas da Xícara Maluca</td>
+                <td>N. D. Wilson</td>
+                <td>Monergismo</td>
                 <td>Categoria</td>
             </tr>
             <tr>
+                <td>I Antologia da Academia Tanguatinguense de Letras</td>
+                <td>ATL</td>
+                <td>ATL</td>
+                <td>Antologia</td>
+            </tr>
+            <tr>
+                <td>A Cruz de Cristo</td>
+                <td>John Stott</td>
+                <td>Vida Acadêmica</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>As Agridoces Cadeias da Graça</td>
+                <td>Wadislau M. Gomes</td>
+                <td>Monergismo</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>O Poder da Esperança</td>
+                <td>Julián Melgosa e Michelson Borges</td>
+                <td>Casa Publicadora Brasileira</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Teologia Sistemática Vol.1</td>
+                <td>Augustus Hopkins</td>
+                <td>Hagnos</td>
+                <td>Teologia Sistemática</td>
+            </tr>
+            <tr>
+                <td>Teologia Sistemática Vol.2</td>
+                <td>Augustus Hopkins</td>
+                <td>Hagnos</td>
+                <td>Teologia Sistemática</td>
+            </tr>
+            <tr>
+                <td>Carta Aos Romanos</td>
+                <td>Karl Barth</td>
+                <td>Fonte Editorial</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Teologia do Antigo Testamento</td>
+                <td>Paul R. House</td>
+                <td>Vida Acadêmica</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Homilética - Da Pesquisa ao Púlpito</td>
+                <td>Jilton Moraes</td>
+                <td>Vida Acadêmica</td>
+                <td>Homilética</td>
+            </tr>
+            <tr>
+                <td>Homilética - Do Púlpito ao Ouvinte</td>
+                <td>Jilton Moraes</td>
+                <td>Vida Acadêmica</td>
+                <td>Homilética</td>
+            </tr>
+            <tr>
+                <td>Homilética - Do Ouvinte à Prática</td>
+                <td>Jilton Moraes</td>
+                <td>Vida Acadêmica</td>
+                <td>Homilética</td>
+            </tr>
+            <tr>
+                <td>Introdução à Hermenêutica Bíblica - 3ª Edição</td>
+                <td>Walter C. Kaiser | JR | Moisés Silva</td>
+                <td>Cultura Cristã</td>
+                <td>Hermenêutica</td>
+            </tr>
+            <tr>
+                <td>Exegese Bíblica - Introdução á Metodologia</td>
+                <td>D. F. Izidro</td>
+                <td>Os Semeadores</td>
+                <td>Exegese</td>
+            </tr>
+            <tr>
+                <td>Novo Testamento Interlinear | Grego - Português 2ª Edição</td>
+                <td>Vilson Scholz</td>
+                <td>Sociedade Bíblica do Brasil</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Supremacia de Deus na Pregação</td>
+                <td>John Piper</td>
+                <td>Shedd</td>
+                <td>Teologia Bíblica</td>
+            </tr>
+            <tr>
+                <td>Freud</td>
+                <td>Rousas John Rushdoony</td>
+                <td>Monergismo</td>
+                <td>Filosofia</td>
+            </tr>
+            <tr>
+                <td>Desigualdades de Gênero, Raça e Etnia</td>
+                <td>Ana Paula Comin de Carvalho | Cristian Jobi Salani | Débora Allebrandt | Nádia Elisa Meinerz | Nilson Wisheimer</td>
+                <td>InterSaberes</td>
+                <td>Sociologia</td>
+            </tr>
+            <tr>
+                <td>Teologia Sistemática</td>
+                <td>InterSaberes</td>
+                <td>InterSaberes</td>
+                <td>Teologia Sistemática</td>
+            </tr>
+            <tr>
+                <td>Personalidade Centrada em Deus</td>
+                <td>Wadislau Martins Gomes</td>
+                <td>Monergismo</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Exegese do Novo Testamento - Do Texto ao Púlpito</td>
+                <td>John D. Grassmick</td>
+                <td>Shedd</td>
+                <td>Exegese</td>
+            </tr>
+            <tr>
+                <td>Cristianismo Público - Evangelho e Lei</td>
+                <td>P. Andrew Sandlin</td>
+                <td>Monergismo/td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Gestão Socio Ambiental no Brasil</td>
+                <td>Rodrigo Berté</td>
+                <td>InterSaberes</td>
+                <td>Socio Ambiental</td>
+            </tr>
+            <tr>
+                <td>Cartas a um Jovem Calvinista - Um convite à tradição reformada</td>
+                <td>James K. A. Smith</td>
+                <td>Monergismo</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Ética Cristã - Para Igrejas do Século XXI</td>
+                <td>Dernival L. Penha | Misael J. Vieira</td>
+                <td>QualiCor</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Prática do Aconselhamento Redentivo</td>
+                <td>Wadislau Martins Gomes</td>
+                <td>Monergismo</td>
+                <td>Aconselhamento Redentivo</td>
+            </tr>
+            <tr>
+                <td>No Crespúsculo do Pensamento Ocidental</td>
+                <td>Herman Dooyerweerd</td>
+                <td>Monergismo</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Teologia Histórica - Uma Introdução ao Desenvolvimento da Doutrina Cristã</td>
+                <td>Gregg R. Alisson</td>
+                <td>Vida Nova</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>História Americana</td>
+                <td>Departamento dos Estados Unidos</td>
+                <td>Departamento dos Estados Unidos</td>
+                <td>História Americana</td>
+            </tr>
+            <tr>
+                <td>Interlinear | Hebraico - Português | Gênesis Completo + Textos bíblicos seletos</td>
+                <td>Enih Gil'ead</td>
+                <td>Clube dos Autores</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>O Homem que Calculava</td>
+                <td>Malba Taham</td>
+                <td>Record</td>
+                <td>Educação Financeira</td>
+            </tr>
+            <tr>
+                <td>Gramática Instrumental - Hebraico 3ª Edição</td>
+                <td>Antônio Renato Gusso</td>
+                <td>Vida Nova</td>
+                <td>Hebraico</td>
+            </tr>
+            <tr>
+                <td>Educação e Novas Tecnologias</td>
+                <td>Glaucia da Silva Brito | Ivonélia da Purificação</td>
+                <td>InterSaberes</td>
+                <td>Filosofia da Educação</td>
+            </tr>
+            <tr>
+                <td>Perspectivas No Movimento Cristão Mundial</td>
+                <td>Ralph D. Winter | Steven C. Hawthone | Kevin D. Bradford</td>
+                <td>Vida Nova</td>
+                <td>Sociologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Biblia - Leitura Diária</td>
+                <td>Silas Malafaia</td>
+                <td>Central Gospel</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Conhecendo As Doutrinas Na Bíblia</td>
+                <td>Myer Pearlman</td>
+                <td>Vida Acadêmica</td>
+                <td>Filosofia Cristã/td>
+            </tr>
+            <tr>
+                <td>Reflexões Cristãs</td>
+                <td>C. S. Lewis</td>
+                <td>Thomas Nelson Brasil</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Cartas a Malcolm</td>
+                <td>C. S. Lewis</td>
+                <td>Thomas Nelson Brasil</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Um Experimento Em Crítica Literária</td>
+                <td>C. S. Lewis</td>
+                <td>Thomas Nelson Brasil</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Introdução ao Aconselhamento Bíblico</td>
+                <td>John MacArthur</td>
+                <td>Thomas Nelson Brasil</td>
+                <td>Aconselhamento Bíblico</td>
+            </tr>
+            <tr>
+                <td>A Revelação de Deus</td>
+                <td>Karl Barth</td>
+                <td>Fonte Editorial</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Dogmática Eclesiástica</td>
+                <td>Karl Barth</td>
+                <td>Fonte Editorial</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Esboço de Uma Dogmática</td>
+                <td>Karl Barth</td>
+                <td>Fonte Editorial</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Bíblia Sagrada - Letra Grande</td>
+                <td>Sociedade Bíblica</td>
+                <td>Sociedade Bíblica</td>
+                <td>Estudo Bíblico</td>
+            </tr>
+            <tr>
+                <td>Capitalismo para Principiantes</td>
+                <td>Vilmar Rodrigues</td>
+                <td>Ática</td>
+                <td>Filosofia</td>
+            </tr>
+            <tr>
+                <td>O Poder da Esposa que Ora</td>
+                <td>Stormie Omartian</td>
+                <td>Mundo Cristão</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Por que Creio Em Deus</td>
+                <td>Cornelius Van Till</td>
+                <td>Monergismo</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Uma Religião Sem Deus - Os Direitos Humanos e a Palavra de Deus</td>
+                <td>Jean-Marc Berthoud</td>
+                <td>Monergismo</td>
+                <td>Filosofia Cristã</td>
+            </tr>
+            <tr>
+                <td>Vestígios da Trindade</td>
+                <td>Peter J. Leithart</td>
+                <td>Monergismo</td>
+                <td>Apologética</td>
+            </tr>
+            <tr>
+                <td>Uma História do Pensamento Cristão - Da Reforma Protestante ao Século 20 Vol.3 2ª Edição</td>
+                <td>Justo L. González</td>
+                <td>Cultura Cristã</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>Práticas de Escrita Para o Letramento no Ensino Superior</td>
+                <td>Schirley Horácio de Gois Hartmann | Sebastião Donizete Santarosa</td>
+                <td>InterSaberes</td>
+                <td>Letras</td>
+            </tr>
+            <tr>
+                <td>Introdução à Pregação Reformada</td>
+                <td>Paulo Anglada</td>
+                <td>Knox</td>
+                <td>Teologia Cristã</td>
+            </tr>
+            <tr>
+                <td>Quem Controla a Escola, Governa o Mundo</td>
+                <td>Gary DeMar</td>
+                <td>Monergismo</td>
+                <td>Filosofia da Educação</td>
+            </tr>
+            <tr>
+                <td>A Tradição Cristã - O Surgimento da Tradição Católica</td>
+                <td>AJaroslav Pelikan</td>
+                <td>Shedd</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>A Tradição Cristã - O Espírito do Cristianismo Oriental</td>
+                <td>AJaroslav Pelikan</td>
+                <td>Shedd</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>A Tradição Cristã - O Desenvolvimento da Teologia Medieval</td>
+                <td>AJaroslav Pelikan</td>
+                <td>Shedd</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>A Tradição Cristã - A Reforma da Igreja e o Dogma</td>
+                <td>AJaroslav Pelikan</td>
+                <td>Shedd</td>
+                <td>História Cristã</td>
+            </tr>
+            <tr>
+                <td>A Tradição Cristã - A Doutrina Cristã e a Cultura Moderna</td>
+                <td>AJaroslav Pelikan</td>
+                <td>Shedd</td>
+                <td>História Cristã</td>
+            </tr>
+           <!-- <tr>
                 <td>Livro</td>
                 <td>Autor</td>
                 <td>Editora</td>
